--- a/Algo_K-ppp_eleve.ipynb
+++ b/Algo_K-ppp_eleve.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Algorithme des *k* plus proches voisins\n",
+    "# Algorithme des *k* plus proches voisins - VERSION ELEVE\n",
     "\n",
     "L'objectif de ce TP est de mettre en œuvre une méthode, celle des $k$ plus proches voisins, qui permet à l’ordinateur de reconnaître automatiquement des chiffres manuscrits (pour lire des chèques, lire des codes postaux par exemple). ![enveloppe](lettres.jpg)\n",
     "\n",
@@ -21,14 +21,16 @@
     "\n",
     "1. Déterminer à la main la distance entre les deux images ci-dessous.\n",
     "\n",
-    "![comparaison](distance_eleve.png)"
+    "![comparaison](distance_eleve.png)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "1. La distance vaut : (compléter) 2×(255−255)+(255−191)+3×(255−0)+(191−40)+(0−0)+(191−0)=1171"
+    "1. La distance vaut : (compléter) "
    ]
   },
   {
@@ -40,18 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# compléter le code\n",
     "def distance (a, b):\n",
-    "    somme = 0\n",
-    "    for i in range (len(a)):\n",
-    "        somme += abs(a[i] - b [i]) \n",
-    "    return somme\n",
-    "\n",
-    "def distance(a,b):\n",
-    "    return sum([abs(a[i]-b[i]) for i in range(len(a))])"
+    "  ..."
    ]
   },
   {
@@ -79,17 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ecrit1.pgm est plus proche de ecrit2.pgm que de ecrit3.pgm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PIL import Image\n",
     "\n",
@@ -97,21 +86,8 @@
     "# met l'image dans un tableau qui est de dimension 784\n",
     "img1 =list(ecrit1.getdata())\n",
     "\n",
-    "ecrit2 = Image.open(\"ecrit2.pgm\")\n",
-    "# met l'image dans un tableau qui est de dimension 784\n",
-    "img2 =list(ecrit1.getdata())\n",
-    "\n",
-    "ecrit3 = Image.open(\"ecrit3.pgm\")\n",
-    "# met l'image dans un tableau qui est de dimension 784\n",
-    "img3 =list(ecrit1.getdata())\n",
-    "\n",
-    "d12 = distance(img1,img2)\n",
-    "d13 = distance(img1,img3)\n",
-    "\n",
-    "if d13<d12:\n",
-    "    print(\"ecrit1.pgm est plus proche de ecrit3.pgm que de ecrit2.pgm\")\n",
-    "else:\n",
-    "    print(\"ecrit1.pgm est plus proche de ecrit2.pgm que de ecrit3.pgm\")"
+    "#Compléter le code\n",
+    "..."
    ]
   },
   {
@@ -120,13 +96,40 @@
    "source": [
     "### 2.3 les k plus proches voisins\n",
     "\n",
-    "Sur le dessin ci-dessous nous avons représenté un chiffre que l'on cherche à l’identifier. Autrement dit, on cherche à déterminer les,proches voisins du caractère entouré.\n",
+    "Sur le dessin ci-dessous nous avons représenté un chiffre que l'on cherche à l’identifier. PoAutrement dit, on cherche à déterminer les,proches voisins du caractère entouré.\n",
     "\n",
     "![trouver](trouver.png)\n",
-    "4. Déterminer les 3-plus proches voisins.\n",
-    "5. Déterminer les 6-plus proches voisins.\n",
+    "4. Déterminer les 3-plus proches voisins."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Déterminer les 6-plus proches voisins."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "6. Que peut-on en déduire ?"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -154,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,22 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 18, 0, 0, 0, 0, 0, 0, 55, 236, 107, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 112, 216, 51, 0, 0, 0, 0, 16, 232, 252, 71, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 148, 252, 126, 0, 0, 0, 0, 22, 252, 252, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 174, 252, 126, 0, 0, 0, 0, 22, 252, 252, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 253, 252, 126, 0, 0, 0, 0, 110, 252, 252, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 107, 254, 253, 109, 0, 0, 0, 0, 84, 253, 236, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 106, 253, 252, 21, 0, 0, 0, 0, 127, 252, 147, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 115, 253, 252, 21, 0, 0, 0, 0, 180, 252, 147, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 167, 253, 252, 21, 0, 0, 0, 0, 232, 252, 121, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 124, 253, 252, 21, 0, 0, 0, 0, 232, 252, 42, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 89, 255, 253, 245, 148, 148, 43, 78, 245, 253, 42, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 125, 231, 252, 252, 252, 253, 252, 252, 252, 42, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 16, 118, 126, 126, 232, 247, 252, 221, 21, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 190, 252, 162, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 190, 252, 84, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 43, 253, 241, 35, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 43, 252, 231, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 52, 252, 231, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 148, 252, 205, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 42, 226, 126, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "Le chiffre representé est : 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(data[23])\n",
-    "\n",
-    "print('Le chiffre representé est :', target[23])"
+    "# Compléter le code \n"
    ]
   },
   {
@@ -221,27 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "26978\n",
-      "4\n",
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "i1=23\n",
-    "i2=65\n",
-    "image1 = data[i1]\n",
-    "image2 = data[i2]\n",
-    "print(distance(image1,image2))\n",
-    "print(target[i1])\n",
-    "print(target[i2])"
+    "# compléter le code \n",
+    "\n",
+    "image1 = ...\n",
+    "image2 = ...\n"
    ]
   },
   {
@@ -257,18 +236,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# compléter le code \n",
+    "\n",
     "def lePlusProcheVoisin (image):\n",
     "    lePlusPres = 0\n",
     "    distanceMin = float(\"inf\")\n",
     "    for i in range(len(data)):\n",
-    "        di = distance (image, data[i])\n",
-    "        if di != 0 and di < distanceMin:\n",
-    "            lePlusPres = i\n",
-    "            distanceMin = di\n",
+    "        ...\n",
+    "        ...\n",
+    "        \n",
+    "        \n",
     "    return (lePlusPres)"
    ]
   },
@@ -281,28 +262,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "4\n",
-      "8\n",
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "indice1 = lePlusProcheVoisin(image1)\n",
-    "print(target[indice1])\n",
-    "print(target[i1])\n",
-    "\n",
-    "indice2 = lePlusProcheVoisin(image2)\n",
-    "print(target[indice2])\n",
-    "print(target[i2])"
+    "# compléter le code \n"
    ]
   },
   {
@@ -323,22 +287,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# compléter le code\n",
     "def lesKplusProchesVoisins (image, k):\n",
     "    listeDesDistances = []\n",
-    "    for img in data:\n",
-    "        listeDesDistances.append (distance (image, img))\n",
+    "    # remplir un tableau avec toutes les distances entre les images de data et notre image\n",
+    "    for ...\n",
+    "        ...\n",
     "    Kppv = []\n",
+    "    # On va déterminer les k plus proches voisins\n",
     "    for i in range (k):\n",
     "        p = float (\"inf\")\n",
     "        for j in range (len (data)):\n",
-    "            if listeDesDistances [j] != 0 and listeDesDistances [j] < p and j not in Kppv:\n",
+    "            # listeDesDistances [j]: représente la distance entre data[j] et notre image\n",
+    "            # à quelle condition cette distance est à prendre en compte ?\n",
+    "            # Compléter le test!\n",
+    "            if ... :\n",
     "                p = listeDesDistances [j]\n",
     "                indice = j\n",
-    "        Kppv. append (indice)\n",
+    "        Kppv.append (indice)\n",
     "    return (Kppv)\n"
    ]
   },
@@ -351,20 +321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4, 4, 4, 4, 4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Kppv = lesKplusProchesVoisins (image1, 5)\n",
-    "print([target[indice] for indice in Kppv])"
+    "# compléter le code \n"
    ]
   },
   {
@@ -378,29 +339,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# compléter le code \n",
+    "\n",
     "def predire (l,k):\n",
     "    Kppv = lesKplusProchesVoisins(l,k)\n",
     "    decomptes = [0]*10\n",
+    "    # target[indice] est le chiffre représenté par l'image data[indice] voir 2.1\n",
     "    for indice in Kppv:\n",
     "        decomptes[target[indice]] += 1\n",
-    "    plusGrandDecompte = decomptes [0]\n",
-    "    for i in range (1,10):\n",
-    "        if decomptes [i] > plusGrandDecompte:\n",
-    "                plusGrandDecompte = decomptes [i]\n",
-    "                indice = i\n",
-    "    return indice\n",
+    "    # Que contiennent decomptes[0], decomptes[1],... ?\n",
+    "    # Que faut-il retourner ?\n",
+    "    ...\n",
+    "    \n",
+    "    return ...\n",
     "\n",
     "print(predire(image1,5))"
    ]
@@ -421,12 +376,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_test = [mnist.data[i].astype(int).tolist() for i in sample[5000:]]\n",
-    "\n",
     "target_test = [int(mnist.target[i]) for i in sample[5000:]]"
    ]
   },
@@ -441,28 +395,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# compléter le code \n",
     "def taux_erreur(k):\n",
     "    '''\n",
     "    calcule le taux d'erreur avec la valeur k pour les k plus proches voisins\n",
     "    '''\n",
-    "    t=0\n",
-    "    n=100#len(target_test)\n",
-    "    for i in range(n):\n",
-    "        if predire(data_test[i],k)!=target_test[i]:\n",
-    "            t+=1\n",
-    "    return t/n\n",
+    "    ...\n",
+    "    \n",
     "\n",
     "print(taux_erreur(5))"
    ]
@@ -480,22 +423,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# compléter le code \n",
     "def optimisation(n):\n",
     "    '''\n",
     "    détermine quelle valeur de k donne la meilleure prédiction, avec k entre 1 et n\n",
     "    '''\n",
-    "    liste_taux=[taux_erreur(k) for k in range(1,n+1)]\n",
-    "    return liste_taux.index(min(liste_taux))+1\n",
+    "    ...\n",
     "\n",
     "print(optimisation(7))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
